--- a/src/app/child-row-table/child-row-table.component.scss
+++ b/src/app/child-row-table/child-row-table.component.scss
@@ -17,6 +17,6 @@
     display: grid;
     font-size: 15px;
     align-items: center;
-    grid-template-columns:  1fr 2fr 2fr 2fr 2fr;
+    grid-template-columns:  2fr 2fr 2fr 2fr;
   }
 }
