--- a/src/app/header-table/header-table.component.html
+++ b/src/app/header-table/header-table.component.html
@@ -1,7 +1,6 @@
 <div class="header">
-  <div class="d-th">ID</div>
   <div class="d-th">Status
-  <app-button-wrapper (filterChanged)="changeStatus($event)"></app-button-wrapper>
+  <app-button-wrapper></app-button-wrapper>
   </div>
   <div class="d-th">Balance</div>
   <div class="d-th">Name</div>
