--- a/src/app/row-table/row-table.component.html
+++ b/src/app/row-table/row-table.component.html
@@ -1,6 +1,4 @@
-<div class="row-table" (click)="toggleChildrenRow()">
-
-  <div class="d-td">{{tableItem?.id}}</div>
+<div class='row-table' [class.change-color]="toggle" (click)="toggleChildrenRow()">
   <div class="d-td">{{tableItem?.isActive | yesNo}}</div>
   <div class="d-td">{{tableItem?.balance}}</div>
   <div class="d-td">{{tableItem?.name}}</div>
