--- a/src/app/child-row-table/child-row-table.component.html
+++ b/src/app/child-row-table/child-row-table.component.html
@@ -1,8 +1,9 @@
 <div class="containerChildRows open">
   <div class="childElements">
-    <div class='d-th'> {{data?.isActive | yesNo}}</div>
-    <div class="d-th">{{data?.balance}}</div>
-    <div class="d-th">{{data?.name}}</div>
-    <div class="d-th">{{data?.email}}</div>
+    <div class="d-th">{{data.id}}</div>
+    <div class='d-th'> {{data.isActive | yesNo}}</div>
+    <div class="d-th">{{data.balance}}</div>
+    <div class="d-th">{{data.name}}</div>
+    <div class="d-th">{{data.email}}</div>
   </div>
 </div>
