--- a/src/app/header-table/header-table.component.html
+++ b/src/app/header-table/header-table.component.html
@@ -1,4 +1,5 @@
 <div class="header">
+  <div class="d-th">ID</div>
   <div class="d-th">Status
   <app-button-wrapper></app-button-wrapper>
   </div>
