--- a/src/app/header-table/header-table.component.scss
+++ b/src/app/header-table/header-table.component.scss
@@ -6,6 +6,6 @@
   height: 100px;
   display: grid;
   align-items: center;
-  grid-template-columns:  2fr 2fr 2fr 2fr;
+  grid-template-columns:  0.5fr 2fr 2fr 2fr 2fr;
 }
 
